--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "SF-pro", sans-serif;
-  src: url("./assets/font/SF-Pro-Rounded-Semibold.ttf") format("ttf")
+  src: url("./assets/font/SF-Pro-Rounded-Semibold.ttf") format("truetype"),
     url("./assets/font/SF-Pro-Rounded-Semibold.woff") format("woff");
   font-weight: 400;
 }
@@ -20,47 +20,55 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .container {
   align-items: center;
 }
 /* NAVBAR */
-
 .navbar {
   margin: 5% auto;
   width: 70%;
-  margin-left: 250px;
+  max-width: 800px;
   margin-top: 80px;
   color: #adadad;
   border: 1px solid #adadad;
   border-radius: 50px;
   height: 47px;
-  width: 704.6px;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
+  display: flex;
+  flex-direction: row-reverse;
   align-items: center;
 }
 li {
-  display: inline;
+  display: inline-flex;
+  justify-content: space-between;
   margin-right: 18px;
   color: #adadad;
+  margin-left: 20px;
 }
 
 #button {
   color: aliceblue;
-  margin-left: 50px;
+  margin-left: 100px;
   border: 1px solid #303132;
   background-color: #303132;
   border-radius: 50px;
   opacity: 0.9;
   padding-right: 25px;
   padding-left: 25px;
-  padding-top: 9px;
-  padding-bottom: 9px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  margin-bottom: 10px;
 }
 ul img {
-  margin-right: 70px;
-  margin-left: 5px;
+  margin-top: 20px;
+  margin-right: 40px;
+  margin-left: 2px;
 }
 
 /* MAIN CONTENT */
@@ -75,7 +83,6 @@ h5 {
   padding-bottom: 11px;
   padding-right: 10.32px;
   padding-left: 10.32px;
-  margin-left: 500px;
   margin-top: 25px;
   margin-bottom: 40px;
 }
@@ -101,11 +108,18 @@ h1 {
   text-align: center;
   font-size: 60px;
   align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 h4 {
   color: #9b9b9b;
-  margin-left: 380px;
   margin-top: 20.92px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 .but2 {
   margin: 0 auto;
@@ -128,34 +142,29 @@ h4 {
   padding-right: 13px;
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-left: 500px;
   margin-top: 30.59px;
   margin-bottom: 71.43px;
-}
-footer img {
-  height: calc(100% - 20px); /* تنظیم فاصله دلخواه */
-  overflow: hidden;
-}
-footer img {
-  position: relative;
-}
-footer img::after {
-  content: ""; /* اضافه کردن یک لایه */
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 100px; /* ارتفاع سایه مشکی */
-  background: linear-gradient(
-    to top,
-    black,
-    transparent
-  ); /* گرادینت مشکی به شفاف */
-  pointer-events: none; /* جلوگیری از اختلال در کلیک */
-  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 footer img {
   position: relative;
-  z-index: 0; /* تصویر زیر گرادینت قرار می‌گیره */
+  z-index: 0;
+  height: calc(100% - 20px);
+  overflow: hidden;
+}
+
+footer img::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(to top, black, transparent);
+  pointer-events: none;
+  z-index: 1;
 }
